Edit empty message for Skills list on cv edition page. + Set 'resizableColumns' to true for Skills list on cv edition page. + fix CSS for text wrapping in Skills list on cv edition page.

--- a/src/main/webapp/css/custom-styles.css
+++ b/src/main/webapp/css/custom-styles.css
@@ -827,3 +827,8 @@ a.accordion-toggle{background: #f5f5f5;}
 .ui-spinner {
     margin-bottom: 9px;
 }
+
+.ui-datatable tbody td.wrap {
+    white-space: normal;
+    word-wrap: break-word;
+}
